[gd_scene load_steps=16 format=3 uid="uid://rn45gytkk6tv"]

[ext_resource type="Script" path="res://Enemies/BeeBot.gd" id="1_eehkx"]
[ext_resource type="PackedScene" uid="uid://4nwp6xgihjc7" path="res://Enemies/BeeBot/bee_root.tscn" id="2_btoc7"]
[ext_resource type="AudioStream" uid="uid://c66nnoqtanfw2" path="res://Enemies/Sounds/robot_defeat.wav" id="3_1gs12"]

[sub_resource type="Animation" id="Animation_5pcps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_6k5ul"]
resource_name = "found_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_iekf1"]
resource_name = "lost_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["?"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqtu2"]
_data = {
"RESET": SubResource("Animation_5pcps"),
"found_player": SubResource("Animation_6k5ul"),
"lost_player": SubResource("Animation_iekf1")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_h03f6"]
radius = 12.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r3occ"]
radius = 0.296127
height = 1.09859

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt8a8"]
albedo_color = Color(0.647059, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qjgky"]

[sub_resource type="Animation" id="Animation_aj4yq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.0872665)]
}

[sub_resource type="Animation" id="Animation_7sj1l"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.66148, 3.14159, 0), Vector3(0.66148, 3.14159, 0.0872665), Vector3(0.66148, 3.14159, 0), Vector3(0.66148, 3.14159, -0.0872665)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wnpkd"]
_data = {
"RESET": SubResource("Animation_aj4yq"),
"default": SubResource("Animation_7sj1l")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_pl7mw"]
size = Vector3(0.1, 0.5, 1)

[node name="FlyingEnemy" type="RigidBody3D" groups=["damageables", "targeteables"]]
gravity_scale = 0.0
continuous_cd = true
sleeping = true
script = ExtResource("1_eehkx")

[node name="ReactionLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23854, 0)
visible = false
billboard = 2
text = "!"
font_size = 192
outline_size = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReactionLabel"]
libraries = {
"": SubResource("AnimationLibrary_sqtu2")
}

[node name="PlayerDetectionArea" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_h03f6")

[node name="MeshRoot" type="CollisionShape3D" parent="."]
transform = Transform3D(0.996195, -0.0871558, 0, 0.0871558, 0.996195, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_r3occ")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(0.998455, -0.0183011, 0.0524617, -0.0183011, 0.783185, 0.621519, -0.0524617, -0.621519, 0.78164, 0.00407339, 0.0482579, -0.211458)
visible = false
material_override = SubResource("StandardMaterial3D_mt8a8")
mesh = SubResource("BoxMesh_qjgky")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshRoot"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_wnpkd")
}

[node name="bee_root" parent="MeshRoot" instance=ExtResource("2_btoc7")]
transform = Transform3D(0.999781, 0.0209424, 0, -0.0164124, 0.783522, 0.621148, 0.0130083, -0.621012, 0.783694, -0.0294347, -0.348716, 0.106444)

[node name="DeathMeshCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, -5.37025e-08, -6.89839e-08, 0, 0.789084, -0.614285, 8.74228e-08, -0.614285, -0.789084, 0, 0.244858, 0.372593)
shape = SubResource("BoxShape3D_pl7mw")
disabled = true

[node name="DefeatSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_1gs12")
